# Jibini.Polymer

./: .gitignore  CMakeLists.txt  Jibini.Polymer.Prototype.sln  Jibini.Polymer.sln  LICENSE.txt
Jibini.Polymer/: NonTerminal.cs  Pattern.cs  Program.cs  Terminal.cs  Token.cs
Jibini.Polymer.CodeSamples/: a000.po
Jibini.Polymer.Frontend/: CMakeLists.txt  Jibini.Polymer.Frontend.c
Jibini.Polymer.Grammar/: CMakeLists.txt  Jibini.Polymer.Grammar.c  Jibini.Polymer.Grammar.h
Jibini.Polymer.Grammar/io/: error.h  source.c  source.h
Jibini.Polymer.Grammar/lexer/: fsa.c  fsa.h  lincludes.h  polymer.l
Jibini.Polymer.Grammar/parser/: pincludes.c  pincludes.h  polymer.y  source_map.c  source_map.h
Jibini.Polymer.Ide/: CodeEditor.Designer.cs  CodeEditor.cs  EditorPane.Designer.cs  EditorPane.cs  EditorPane.resx  Jibini.Polymer.Ide.csproj  Program.cs
Jibini.Polymer.Integration/: Jibini.Polymer.Integration.sln
Jibini.Polymer.Integration/Jibini.Polymer.AstExaminer/: AstExaminer.Designer.cs  AstExaminer.cs  EditorPane.Designer.cs  EditorPane.cs  EditorPane.resx  Jibini.Polymer.AstExaminer.csproj  Program.cs
Jibini.Polymer.Integration/Jibini.Polymer.Ide/: Jibini.Polymer.Ide.csproj  MainLayout.razor  _Imports.razor
Jibini.Polymer.Integration/Jibini.Polymer.Ide/Client/: Jibini.Polymer.Ide.Client.csproj  Program.cs  _Imports.razor
Jibini.Polymer.Integration/Jibini.Polymer.Ide/Client/Pages/: Index.razor
Jibini.Polymer.Integration/Jibini.Polymer.Ide/Client/Properties/: launchSettings.json
Jibini.Polymer.Integration/Jibini.Polymer.Ide/Client/wwwroot/: manifest.json
Jibini.Polymer.Integration/Jibini.Polymer.Ide/Pages/: Index.razor  _Host.cshtml
Jibini.Polymer.Integration/Jibini.Polymer.Ide/Properties/: launchSettings.json
Jibini.Polymer.Integration/Jibini.Polymer.Ide/Server/: Jibini.Polymer.Ide.Server.csproj  Program.cs
Jibini.Polymer.Integration/Jibini.Polymer.Ide/Server/Pages/: Error.cshtml  Error.cshtml.cs  _Host.cshtml
Jibini.Polymer.Integration/Jibini.Polymer.Ide/Server/Properties/: launchSettings.json
Jibini.Polymer.Integration/Jibini.Polymer.Ide/Shared/: CodeEditor.razor  CodeEditor.razor.css  Jibini.Polymer.Ide.Shared.csproj  KeepIn.razor  KeepWithin.razor
Jibini.Polymer.Integration/Jibini.Polymer.Ide/SharedComponents/: CodeEditor.razor  CodeEditor.razor.css  CodeEditor.razor.js  Jibini.Polymer.Ide.SharedComponents.csproj  KeepIn.razor  KeepIn.razor.css  KeepIn.razor.js  KeepWithin.razor.css
Jibini.Polymer.Integration/Jibini.Polymer.Ide/SharedComponents/Extensions/: JsInteropExtensions.cs
Jibini.Polymer.Integration/Jibini.Polymer.Ide/wwwroot/css/: site.css
Jibini.Polymer.Integration/Jibini.Polymer.Ide/wwwroot/js/: CodeEditor.js
Jibini.Polymer.LlvmBackend/: CMakeLists.txt  Jibini.Polymer.LlvmBackend.cpp
Jibini.Polymer.Prototype/: Program.cs  TokenStream.cs
Jibini.Polymer.Prototype/Grammar/: Body.cs  Declaration.cs  Epsilon.cs  Function.cs  Ident.cs  Parameters.cs  Statements.cs  Type.cs  TypeParams.cs
Jibini.Polymer.Prototype/Grammar/Expression/: Assignment.cs  BinNumber.cs  Exponent.cs  Expression.cs  FuncCall.cs  Ident.cs  Lambda.cs  Number.cs  Parens.cs  StringLit.cs
Jibini.Polymer.Prototype/Grammar/Statement/: Body.cs  Declaration.cs  For.cs  ForEach.cs  FuncCall.cs  Function.cs  IfElse.cs  Statement.cs  Statements.cs  While.cs
Jibini.Polymer.Prototype/Interpreter/: ExpressionImpl.cs  State.cs  StatementImpl.cs
Jibini.Polymer.Prototype/Lexer/: Pattern.cs  Token.cs  TokenStream.cs
Jibini.Polymer.Prototype/Parser/: NonTerminal.cs  Terminal.cs
Jibini.Polymer.Prototype/Parsing/: NonTerminal.cs  Terminal.cs
Jibini.Polymer.Shared/: CMakeLists.txt  Jibini.Polymer.Shared.c  Jibini.Polymer.Shared.h
